--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
   "scripts": {
     "build:esm": "BABEL_ENV=esm babel src --out-dir esm",
     "build:commonjs": "BABEL_ENV=commonjs babel src --out-dir lib",
-    "build:umd": "NODE_ENV=development webpack src/index.js umd/ConnectedReactRouter.js",
-    "build:umd:min": "NODE_ENV=production webpack -p src/index.js umd/ConnectedReactRouter.min.js",
+    "build:umd": "NODE_ENV=development webpack -d src/index.js --output umd/ConnectedReactRouter.js",
+    "build:umd:min": "NODE_ENV=production webpack -p src/index.js --output umd/ConnectedReactRouter.min.js",
     "build": "npm run build:esm & npm run build:commonjs & npm run build:umd & npm run build:umd:min",
     "lint": "eslint .",
     "test": "jest --config ./.jestrc.json",
